2008-09-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpangolayout.c (layout_copy): fix memory leak.

	* src/rbpangocairo.c (create_layout, font_map_create_context):
	fix memory leak.
	Reported by James Healy. Thanks!!!

2008-09-13  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: use check_cairo.

2008-08-20  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpangofontdescription.c (font_desc_set_weight): add missing
	type declaration for 'wight' argument. [#2059917]
	Reported by Blondel Mathieu. Thanks!!!

2008-08-09  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpangolayout.c: Pango::Layout#font_description= accepts
	font description string too.

	* test/: add.

2008-06-11  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: include pango/pango.h in have_func test.

2008-06-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpangolayoutiter.c: use '#ifndef' not '#if !' for -DXXX variable.

2008-04-13  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: fix rcairo's source path.

2008-03-04  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb, src/rbpango.h, src/rbpangoglyphitem.c:
	pango_glyph_item_get_type() was defined in upstream.

2008-01-03  Kouhei Sutou  <kou@cozmixng.org>

	* src/depend: don't use ftools.
	Reported by Carlo E. Prelz. Thanks!!!

2007-12-28  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/pango.rb: used implicit to_s instead of '+'.

	* src/rbpangoglyphstring.c, src/rbpangolayout.c: used RSTRING_LEN.

2007-08-31  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* src/depend: re-supported build in no-source directory.

2007-08-13  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpangocairo.c (Pango.cairo_available?): moved from ...
	* src/lib/pango.rb: ... here.

2007-07-14  Detlef Reichl

	* extconf.rb: Accept the srcdir includes spaces.

2007-07-13  Guillaume Cottenceau

	* src/rbpangoattribute.c, src/rbpangofont.c,
	src/rbpangofontdescription.c, src/rbpangofontset.c,
	src/rbpangoglyphinfo.c, src/rbpangoglyphstring.c,